css/styles.css
/* ... */
.button--theme3:active span{
  opacity:0.3;
}

.button__text {
  line-height: 1.125;
  text-transform: uppercase;
  font-weight: 500;
}
.button:active .button__text {
  opacity: 0.7;
}

/* RADIO-BUTTONS */

.radio__label {
  cursor: pointer;
  display:flex;
  align-items: center;
  column-gap:10px;
}

.radio__label::before {
  content: "";
  width: 25px;
  height: 25px;
  opacity: 0.7;
  background: url(/img/icons/radio-dark.svg) 0 0 no-repeat;
  flex-shrink:0;
}

.radio__input:checked + .radio__label::before {
  background: url(/img/icons/radio-dark-checked.svg) 0 0 no-repeat;
}

.radio__input:hover + .radio__label::before{
  opacity: 1;
}
.radio__input:disabled + .radio__label::before,
.radio__input:disabled + .radio__label {
  opacity: 0.3;
}

/* CHECK-BUTTONS */

.check__label {
  cursor: pointer;
  display:flex;
  column-gap:10px;
  line-height: 25px;
}

.check__label::before {
  content: "";
  width: 25px;
  height: 25px;
  opacity: 0.7;
  background: url(/img/icons/checkbox-dark-unchecked.svg) 0 0 no-repeat;
  flex-shrink:0;
}

.check__input:checked + .check__label::before {
  background: url(/img/icons/checkbox-dark.svg) 0 0 no-repeat;
}
.check__input:hover  + .check__label::before {
  opacity: 1;
}
.check__input:disabled + .check__label::before,
.check__input:disabled + .check__label {
  opacity: 0.3;
}

/* NAVIGATION */

.nav {
  display:grid;
  grid-template-columns: 160px 1fr 160px;
  column-gap: 20px;
}

.nav--current {
  text-decoration: underline;
  text-underline-offset: 12px;
  text-decoration-thickness: 2px;
  text-decoration-color: var(--special-neutral);
}

.site-nav, .user-nav {
  display: flex;
  flex-wrap: wrap;
  row-gap: 15px;
  column-gap: 45px;
  align-items: flex-start;
}

.site-nav{
  justify-content:center;
}

.user-nav{
  justify-content: flex-end;
 }

 .user-nav__icon{
  display:flex;
  column-gap: 25px;
  align-items: center;
 }

.user-nav__icon::before{
  content: "";
  width: 15px;
  height: 15px;
  background-image: url("../img/icons/basket.svg");
}

/* LOGO */

.logo__link {
  opacity: 1;
}

.logo__link:hover {
  opacity: 0.7;
}

.logo__link:active {
  opacity: 0.3;
}
.logo__img{
  width:160px;
  height:65px;
}


/* HEADER */

.header__nav{
 padding-top: 50px;
 min-height: 65px;
}

.header__site-nav {
  padding-top: 30px;
}

.header__user-nav {
   padding-top: 30px;
   max-width: 160px;
}



/* GALERY */

.galery {
  background-color: var(--basic-light);
  position: relative;
}

.galery__list {
  display:flex;
  flex-direction: column;
}

.galery__item{
  display: none;
  background-position: top right;
  background-repeat: no-repeat;
  }

  .galery__item--1{
  background-image: url("../img/all/nerds-index-slide-1-min.png");
  }
 .galery__item--2{
  background-image: url("../img/all/nerds-index-slide-2-min.png");
  }
  .galery__item--3{
  background-image: url("../img/all/nerds-index-slide-3-min.png");
  }

.galery__item--current {
  display:block;
  padding: 60px 0;
  min-height: 310px;
}

 .galery__text{
  margin-top: 10px;
 }

.galery__button {
  padding: 15px 55px;
  margin-top: 45px;
 }

.galery__controls {
  position: absolute;
  bottom: 100px;
  left: 0;
  width:100%;
  display: flex;
  justify-content: center;
  z-index:2;
}
.controls{
  display: flex;
  flex-direction: row;
  justify-content:space-between;
  width: 88px;
}
.button-control{
  width:18px;
  height:18px;
  border-radius: 50%;
  border: 0;
  background-color: var(--basic-white);
  color: var(--basic-white);
}

.galery__controls button.current{
  box-shadow: inset 0 0 0 5px var( --basic-white),
  inset 0 0 0 7px var( --basic-light-gray);
}

/*MAIN PAGE */

/* SERVICES */

.services__list {
  display:grid;
  column-gap: 40px;
  grid-template-columns: repeat(3,1fr);
  padding: 75px 0;
  border-bottom: 2px solid var(--basic-light);
}

.services__back {
  display:block;
  width:300px;
  height:146px;
  background-color: var( --basic-light-gray);
  background-repeat: no-repeat;
}

.services__back--1 {
  background-image: url("../img/all/illustration-1-min.png");
}

.services__back--2 {
  background-image: url("../img/all/illustration-2-min.png");
}

.services__back--3 {
  background-image: url("../img/all/illustration-3-min.png");
}

.services__title {
  margin-top: 25px;
}
.services__text{
  margin-top: 20px;
}
.services__button {
  padding: 15px 40px;
  margin-top: 30px;
  max-width: 220px;
}


/* ABOUT-US */
.about{
  display: grid;
  grid-template-columns: repeat(3,1fr);
  grid-template-rows: auto auto;
  column-gap:40px;
  row-gap:40px;
  grid-template-areas:
  "title title img"
  "fig1 fig1 fig2";
  margin-top: 40px;
  padding: 40px 0 75px 0;
  border-bottom: 2px solid var(--basic-light);
  background-image: url("../img/logo/nerds-illustration-min.png");
  background-position: top right;
  background-repeat:no-repeat;
}
.about__description {
  grid-area: title;
}

.about__text{
  margin-top:35px;
}

.about__skills{
  grid-area: fig1;
}
.about__skillslist{
  grid-area: fig1;
  margin-left: 35px;
}
.about__skillsitem{
  position: relative;
  margin-top: 30px;
}
.about__skillsitem::before {
  content: "";
  position: absolute;
  width: 25px;
  height: 2px;
  background-color: var( --special-light );
  left: -35px;
  top: 50%;
  transform: translateY(-50%);
}

.about__stat {
  grid-area: fig2;
 }
 .about__stat span{
  margin-left: 15px;
 }
.about__statlist{
  display:grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto auto;
  row-gap: 15px;
  margin-top: 40px;
}
.about__statlist dd{
  grid-row: 1/2;
}
.about__statlist dt{
  grid-row: 2/3;
}

/* CLIENTS */

.clients{
  border-bottom: 2px solid var(--basic-light);
}

.clients__list{
display: grid;
grid-template-columns: repeat(4, 1fr);
grid-template-rows: 1fr;
grid-gap: 40px;
justify-content: center;
align-items: center;
min-height: 180px;
}

.clients__item {
  position: relative;
}
/* ... */

